# Task-Manager

./: .gitignore  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
.rootcx/: launch.json
backend/: index.ts
src/: App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddListButton.tsx  BoardHeader.tsx  BoardsView.tsx  CardDetailModal.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanList.tsx  MemberPicker.tsx  PublicBoardView.tsx  ReadOnlyCard.tsx  ReadOnlyCardDetail.tsx  ReadOnlyList.tsx  ShareModal.tsx
src/lib/: utils.ts
